--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="google-site-verification" content="8xHGJmspcRqGL3EkhLwv6IdwvNoMDzSt-OFqmnKJENE" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>ZextIo</title>
   <meta name="description" content=">Zextio,We rebuilds the world">
